
SET(libfimexf_SOURCES
  fimex.f90
  fimex2d.F90
)

LINK_DIRECTORIES(${PC_LIBRARY_DIRS} ${BOOST_LIBRARY_DIRS})

FIMEX_ADD_LIBRARY(fimexf "${libfimexf_SOURCES}" "libfimex;${openmp_F90_PACKAGES}")

SET (F90_MOD_DIR "${CMAKE_CURRENT_BINARY_DIR}/libfimexf_mods")
SET_TARGET_PROPERTIES(libfimexf PROPERTIES
  Fortran_MODULE_DIRECTORY "${F90_MOD_DIR}"
)
INSTALL(FILES
  "${F90_MOD_DIR}/fimex.mod"
  "${F90_MOD_DIR}/fimex2d.mod"
  DESTINATION "${FIMEX_INSTALL_INCLUDEDIR}"
  )

IF((ENABLE_FELT) AND (ENABLE_NETCDF))
  SET(F90_TESTS testFortran)
ENDIF()

SET (CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-none")

FOREACH(T ${F90_TESTS})
  ADD_EXECUTABLE(${T} "${T}.F90")
  TARGET_LINK_LIBRARIES(${T} libfimexf)
  TARGET_INCLUDE_DIRECTORIES(${T} PRIVATE "${F90_MOD_DIR}")
  TARGET_COMPILE_DEFINITIONS(${T} PRIVATE -DTOP_SRCDIR="${CMAKE_SOURCE_DIR}" -DTEST_EXTRADATA_DIR="${TEST_EXTRADATA_DIR}")
  ADD_TEST(NAME ${T} COMMAND ${T})
ENDFOREACH()

SET_PROPERTY(
  TEST ${F90_TESTS}
  APPEND PROPERTY ENVIRONMENT "FIMEX_IO_PLUGINS_PATH=${FIMEX_IO_PLUGINS_PATH}"
)
