[project]
name = "fimex_xarray"
version = "0.0.1"
readme = "README.md"

dependencies = [
    # "pyfimex0",
    "numpy",
    "xarray",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.entry-points."xarray.backends"]
fimex = "fimex_xarray.xr:FimexBackendEntrypoint"
