configdir=$(datadir)/etc
config_DATA = \
	cdmWriterConfig.xml\
	cdmWriterConfig.dtd\
	damocles_felt2nc_variables.xml\
	damocles_felt_axes.xml\
	damocles_felt_global_attributes.xml\
	felt2nc_variables.dtd\
	felt2nc_variables_ec_mad_0_25.xml\
	felt2nc_variables_ec_mad_0_5.xml\
	felt2nc_variables_ec_wav.xml\
	felt2nc_variables_hirlam12_damocles_ml.xml\
	felt2nc_variables_hirlam12_damocles_pl.xml\
	felt2nc_variables_hirlam12_damocles_sf_1h.xml\
	felt2nc_variables_hirlam12_damocles_sf_3h.xml\
	felt2nc_variables_hirlam12_damocles_sf_60h.xml\
	felt2nc_variables_hirlam20.xml\
	felt2nc_variables.xml\
	felt_axes.xml\
	felt_global_attributes.xml\
	felt_variables.dtd\
	felt_variables_ec_mad_0_25.xml\
	felt_variables_ec_mad_0_5.xml\
	felt_variables_ec_wav.xml\
	felt_variables_hirlam12ml.xml\
	felt_variables_hirlam12pl.xml\
	felt_variables_hirlam12sf_1h.xml\
	felt_variables_hirlam12sf_3h.xml\
	felt_variables_hirlam12sf_60h.xml\
	felt_variables_hirlam20.xml\
	fimex_example.cfg
				
EXTRA_DIST = $(config_DATA)