configdir=$(pkgdatadir)
config_DATA = \
    cdmGribReaderConfig.xml\
    cdmGribReaderConfig.xsd\
	cdmGribWriterConfig.xml\
	cdmGribWriterConfig.xsd\
	cdmMetGmReaderConfig.xml\
	cdmMetGmWriterConfig.xml\
	cdmQualityConfig.xml\
    cdmQualityConfig.xsd\
	cdmWriterConfig.xml\
	cdmWriterConfig.dtd\
	cdmWriterConfigDeprecated.xml\
	damocles_ec_felt_global_attributes.xml\
	damocles_felt_axes.xml\
	damocles_felt_global_attributes.xml\
	damocles_felt2nc_variables.xml\
	felt_axes.xml\
	felt_global_attributes.xml\
	felt_variables_ec_mad_0_25.xml\
	felt_variables_ec_mad_0_5.xml\
	felt_variables_ec_wav.xml\
	felt_variables_ec_wef_geo_mew.xml\
	felt_variables_hirlam12ml.xml\
	felt_variables_hirlam12pl.xml\
	felt_variables_hirlam12sf_1h.xml\
	felt_variables_hirlam12sf_3h.xml\
	felt_variables_hirlam12sf_60h.xml\
	felt_variables_hirlam20.xml\
	felt_variables.dtd\
	felt2nc_eps_yr.xml\
	felt2nc_frohavet.xml\
	felt2nc_proff.xml\
	felt2nc_variables_ec_mad_0_25.xml\
	felt2nc_variables_ec_mad_0_5.xml\
	felt2nc_variables_ec_mwp_0_25.xml\
	felt2nc_variables_ec_wef_geo_mew.xml\
	felt2nc_variables_hirlam12_damocles_ml.xml\
	felt2nc_variables_hirlam12_damocles_pl.xml\
	felt2nc_variables_hirlam12_damocles_sf_1h.xml\
	felt2nc_variables_hirlam12_damocles_sf_3h.xml\
	felt2nc_variables_hirlam12_damocles_sf_60h.xml\
	felt2nc_variables_hirlam20.xml\
	felt2nc_variables_mersea.xml\
	felt2nc_variables.dtd\
	felt2nc_variables.xml\
	fimex_example.cfg\
	metgm_config.xsd\
	ncml-2.2.xsd \
	ncml-2.2-fimex-0.xsd \
	ncmlCDMConfig.ncml \
	template4interpolation.cdl \
	wdb_config.xml \
	wdb_config.xsd \
	wdb.example.wdbml


				
EXTRA_DIST = $(config_DATA)
